feat(recommendation): 添加高级选项配置功能
- 在推荐生成接口中增加 advancedOptions 参数支持
- 添加中性化、正交化、极值处理、标准化等高级选项配置
- 集成 CandlestickChart 图表类型到 ECharts 配置
- 实现均线位置过滤功能（MA30/MA60/MA100）
- 添加市场环境覆盖和黑名单过滤选项
- 更新 API 接口参数传递机制
- 优化策略列表页面布局并添加导出功能
- 修复前端组件属性名兼容性问题